--- a/resources/assets/sass/views/_home.scss
+++ b/resources/assets/sass/views/_home.scss
@@ -14,6 +14,7 @@ Home
             color: $white;
 
             &:hover {
+                color: $white;
                 opacity: 0.5;
             }
         }
